# oop-google-test

./: .gitignore  CMakeLists.txt  LICENSE  Readme.MD
main/: main.cpp
main/include/: Dummy.hpp
main/src/: Dummy.cpp
main/testing/: Makefile
src/: main.cpp
test/: dummyTest.cpp
tests/: mainTest.cpp
